# AI_gov

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
docs/: architecture.md  milvus_migration.md
scripts/: build_regulation_index.py  extract_f02_scoring.py
specs/: CLAUDE.md  README.md
specs/p3-01-regulation-index/: spec.md
specs/p3-01-regulation-index/contracts/: schemas.py
specs/p3-02-canonical-map/: spec.md
specs/p3-02-canonical-map/contracts/: schemas.py
specs/p3-03-rag-checks/: spec.md
specs/p3-03-rag-checks/contracts/: schemas.py
src/govcheck/: logging_setup.py
src/govcheck/checks/: base.py
src/govcheck/classify/: __init__.py  classifier.py
src/govcheck/config/: f02_scoring.yaml  llm_config.yaml  log_config.yaml  review_config.yaml
src/govcheck/llm/: __init__.py  client.py  config.py
src/govcheck/models/: __init__.py  f01.py  f02.py  f03.py  finding.py  submission.py
src/govcheck/parsers/: _util.py  f01_parser.py  f02_parser.py  (+1 more)
tests/: conftest.py  fixture_builder.py  test_classify.py  test_cross_consistency.py  test_engine_rag.py  test_f01_rules.py  test_f02_reg_refs.py  test_f02_rules.py  test_f02_score.py  test_f03_evidence_llm.py  test_f03_evidence_rule.py  test_f03_parser.py  test_f03_parser_refs.py  test_f03_parser_unit.py  test_f03_rag.py  test_llm_client.py  test_llm_config.py  test_logging_setup.py  test_missing_docs.py  test_rag_chunker.py  test_rag_config.py  test_rag_embedding.py  test_rag_mapping.py  test_rag_pdf_text.py  test_rag_refs.py  test_rag_store.py  test_submission.py  test_web_api.py
tests/golden/: README.md  generate_snapshot.py  phase2_baseline.json
web/: app.js  index.html  styles.css
(+47 files in other folders)
