[project]
name = "govcheck"
version = "0.1.0"
description = "AI 治理審查小幫手 — 上傳 F01/F02/F03 表單，自動產出結構化初判報告"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "pydantic>=2.9",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/govcheck"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
